Fixed bugs in crypto transformation
Merge of branch 2022.03.bug_fix_transf_crypto

- check that variables are defined when needed
- fixed internal error: name_indexes contains an entry only for the
head of each group of new; this was not taken into account when checking
that variables are defined when needed.
- fixed bug in treatment of errors in Check.find_assoc
- localize error messages in Check

- Version of WireGuard with improved probabilities, for ANSSI

--- a/CHANGES
+++ b/CHANGES
@@ -20,6 +20,8 @@ Version
   CryptoVerif will raise an error otherwise.
 - Fixed internal error due to a forgotten game before focus command.
 - Fixed internal error LetEqual terms should have a variable in the left-hand side
+- Fixed bugs in crypto transformation (in particular, check that variables are
+  defined when needed).
 
 Version 2.05
 
