--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -2946,18 +2946,42 @@ The program point $occ$ must correspond to a term not containing \texttt{if}, \t
   which are used only for testing that branch $j$ has been executed.
   This allows the merge to succeed more often.
 
-\item $\texttt{guess }i$ guesses the tested session, where the identifier $i$ is the
-replication index to be guessed; there must be a single
-replication with index $i$ in the game. Alternatively, the form $\texttt{guess }occ$ can also be used,
-where $occ$ is the occurrence of the replication whose index $i$ is to be guessed. 
-CryptoVerif distinguishes whether the replication index $i$ 
-is equal to a constant value $i_{\mathit{tested}}$ by introducing a test 
-under the considered replication, and tries to prove the
-security properties for the session in which $i = i_{\mathit{tested}}$.
+\item $\texttt{guess }\nonterm{guessspec}$ guesses value of $\nonterm{guessspec}$ in the tested session,
+  where $\nonterm{guessspec}$ can be one of the following:
+  \begin{enumerate}
+  \item $i$, where $i$ is the replication index to be guessed. There must be a single
+    replication with index $i$ in the game.
+
+  \item $occ$, where $occ$ is the occurrence of the replication whose index $i$ is to be guessed.
+
+  \item $i\texttt{ \&\& above}$, where $i$ is a replication index; then, just under the replication with index $i$,
+    one guesses the whole sequence of replication indices above the replication with index $i$.
+    There must be a single replication with index $i$ in the game.
+
+  \item $occ\texttt{ \&\& above}$, where $occ$ is the occurrence of a replication; then, just under that replication,
+    one guesses the whole sequence of replication indices above that replication.
+
+  \item $x[i_1, \dots, i_n]$, where $x[i_1, \dots, i_n]$ is the variable to be guessed,
+    defined under $n$ replications, and $i_1, \dots, i_n$ are constant replication indices
+    (typically produced by a previous guess of the replication indices).
+    CryptoVerif must be able to determine, at each definition of $x$, whether its indices
+    will be equal to $i_1, \dots, i_n$ or not. Otherwise, the transformation fails.
+    When $x$ is defined under no replication, one writes $x$ instead of $x[i_1, \dots, i_n]$.
+
+  \end{enumerate}
+    CryptoVerif distinguishes whether the element specified by  $\nonterm{guessspec}$
+is equal to a constant value $v_{\mathit{tested}}$ by introducing a test 
+under the definition of that element, and tries to prove the
+security properties for the session in which $\nonterm{guessspec} = v_{\mathit{tested}}$.
 The queries are adjusted accordingly. The probability of breaking
-the initial query is typically $N$ times the probability of
-breaking the query for session $i = i_{\mathit{tested}}$, where
-the replication index $i$ is in $[1,N]$.
+the initial query is typically the size of the guessed element $\nonterm{guessspec}$
+(e.g. $N$ when we guess a replication index $i$ in $[1,N]$;
+$\#O$ when we guess the whole sequence of indices above a replication just above oracle $O$;
+$|T|$ when we guess a variable $x$ of type $T$)
+times the probability of
+breaking the query for session $\nonterm{guessspec} = v_{\mathit{tested}}$.
+The size of the guessed element must be estimated less than \texttt{maxGuess}
+(see the command \texttt{set maxGuess}).
 
 This transformation cannot apply to injective correspondences.
 If injective correspondences are present, they are left unchanged
