--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,11 @@ of the cryptographic protocol verifier.
 
 Version
 
+- Extended the "guess" transformation to be able to guess any variable,
+  not only replication indices, and to guess the whole sequence of
+  replication indices up to a replication.
+- New setting "set maxGuess = <size>." to limit the size of guessable
+  values.
 - Improved modelling of Diffie-Hellman in the standard library of primitives:
    - DH_proba_collision and square_DH_proba_collision no longer include
      DH_basic
