output of interactive commands
Merge of branch 2022.06.save_commands

- output of interactive commands
- added missing commands in help

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,9 @@ of the cryptographic protocol verifier.
 
 Version
 
+- Allow saving and showing executed interactive commands
+  (command-line option -ocommands, interactive commands show_commands
+  and out_commands)
 - Extended the "guess" transformation to be able to guess any variable,
   not only replication indices, and to guess the whole sequence of
   replication indices up to a replication.
